# obs-mouse-zoom

./: CMakeLists.txt  buildspec.json
src/: plugin-main.cpp
